--- a/home.html
+++ b/home.html
@@ -60,12 +60,47 @@
 									<h6><a href="#">Thêm kỹ năng</a></h6>
 								</div>
 							</div>
-							<ul>
-								<li><i class="material-icons">assignment_ind</i>Hồ sơ của tối</li>
-								<li><i class="material-icons">assignment_ind</i>Hồ sơ của tối</li>
-								<li><i class="material-icons">assignment_ind</i>Hồ sơ của tối</li>
-								<li><i class="material-icons">assignment_ind</i>Hồ sơ của tối</li>
-								<li><i class="material-icons">assignment_ind</i>Hồ sơ của tối</li>
+							<ul class="menu-item">
+								<li>
+									<div class="menu-item-header"><a href="#"><i class="material-icons margin-right-5">account_box</i>Hồ sơ cá nhân</a></div>
+									<div class="menu-item-body">
+										<ul>
+											<li><a href="#">Chỉnh sửa hồ sơ</a></li>
+											<li><a href="#">Người xem hồ sơ</a></li>
+											<li><a href="#">Nhật ký hoạt động</a></li>
+											<li><a href="#">Hòm thư</a></li>
+										</ul>
+									</div>
+								</li>
+								<li>
+									<div class="menu-item-header"><a href="#"><i class="material-icons margin-right-5">add_alert</i>Thông báo</a>
+										<div class="chip red lighten-2 white-text noti-count">5</div>
+									</div>
+								</li>
+								<li>
+									<div class="menu-item-header"><a href="#"><i class="material-icons margin-right-5">donut_large</i>Theo dõi</a></div>
+									<div class="menu-item-body">
+										<ul>
+											<li><a href="#">Người đang theo dõi</a></li>
+											<li><a href="#">Công ty đang theo dõi</a></li>
+										</ul>
+									</div>
+								</li>
+								<li>
+									<div class="menu-item-header"><a href="#"><i class="material-icons margin-right-5">bookmark</i>Quản lý nghề nghiệp</a></div>
+									<div class="menu-item-body">
+										<ul>
+											<li><a href="#">Công việc đã lưu</a></li>
+											<li><a href="#">Công việc đề xuất</a></li>
+										</ul>
+									</div>
+								</li>
+								<li>
+									<div class="menu-item-header"><a href="#"><i class="material-icons margin-right-5">account_circle</i>Tài khoản</a></div>
+								</li>
+								<li>
+									<div class="menu-item-header"><a href="#"><i class="material-icons margin-right-5">exit_to_app</i>Thoát</a></div>
+								</li>
 							</ul>
 						</div>
 					</div>
@@ -73,5 +108,35 @@
 			</div>
 		</div>
 	</header>
+	<div class="container">
+		<div class="row">
+			<div class="card-panel">
+				<div class="row">
+					<div class="row">
+						<div class="col s2">
+							<img src="imagdes/carousel/1.png">
+						</div>
+						<div class="col s10">
+							<h5 class="uppercase">Senior Java Developer</h5>
+						</div>
+					</div>
+					<div class="row">
+
+					</div>
+				</div>
+			</div>
+
+			<div class="card-panel">
+				<h5>Nhà tuyển dụng hàng đầu</h5>
+				<div class="carousel">
+					<a class="carousel-item" href="#one!"><img src="images/carousel/1.png"></a>
+					<a class="carousel-item" href="#two!"><img src="images/carousel/2.png"></a>
+					<a class="carousel-item" href="#three!"><img src="images/carousel/3.png"></a>
+					<a class="carousel-item" href="#four!"><img src="images/carousel/4.png"></a>
+					<a class="carousel-item" href="#five!"><img src="images/carousel/8.png"></a>
+				</div>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
