+ Top Job + Top Company

--- a/home.html
+++ b/home.html
@@ -22,6 +22,12 @@
 	<script type="text/javascript" src="js/script.js"></script>
 	<script type="text/javascript" src="js/common.js"></script>
 	<script type="text/javascript" src="js/search.js"></script>
+
+	<!--JCarousel -->
+	<script type="text/javascript" src="js/jquery.jcarousel.min.js"></script>
+
+	<!--Scroll to Fixed-->
+	<script type="text/javascript" src="js/jquery-scrolltofixed-min.js"></script>
 </head>
 <body onclick="onClickToBody()">
 	<header>
@@ -110,30 +116,98 @@
 	</header>
 	<div class="container">
 		<div class="row">
-			<div class="card-panel">
-				<div class="row">
-					<div class="row">
-						<div class="col s2">
-							<img src="imagdes/carousel/1.png">
-						</div>
-						<div class="col s10">
-							<h5 class="uppercase">Senior Java Developer</h5>
-						</div>
-					</div>
-					<div class="row">
+			<div class="col m9">
+				<!-- JOB PANEL -->
+				<div class="card-panel">
+					<div class="card-content">
+						<div class="row">
+							<div class="col m9">
+								<h5>SENIOR JAVA DEVELOPER</h5>
+								<div class="row">
+									<span class="col m8 red-text">Công ty phần mềm Global Cybersoft</span>
+									<span class="col m4">Tân Bình | Hồ Chí Minh</span>
+									<span class="col m8">Chức vụ: Nhân viên</span>
+								</div>
+								<div class="row">
+									<span class="col m12">
+										Triển khai các dự án của công ty (frontend-backend).Tham gia lấy yêu cầu, thiết kế, xây dựng, triển khai, quản trị. Chịu trách nhiệm về tiến độ và kết quả công việc được giao. Hoàn thiện bản thân về kỹ năng lập kế hoạch và quản lý nhóm....
+									</span>
+								</div>
+								<div class="row">
+									<span class="col m8">
+										<a href="#" class="chip">Java</a>
+										<a href="#" class="chip">English</a>
+										<a href="#" class="chip">MySQL</a>
+										<a href="#" class="chip">HTML</a>
+										<a href="#" class="chip">CSS</a>
+									</span>
+								</div>
+							</div>
+							<div class="col m3">
+								<div class="row center">
+									<span class="salary">500$-1000$</span>
+									<div class="logo-box">
+										<img class="responsive-img" src="images/small_logo.png">
+									</div>
+								</div>
+								<div class="row center">
+									<span class="publish-date">20/10/2012</span>
+									<span class="view-count">2034</span>
+								</div>
+							</div>
 
+						</div>
 					</div>
 				</div>
+				<div class="card-panel">
+					<div class="card-content">
+						<div class="row">
+							<div class="col m9">
+								<h5>SENIOR JAVA DEVELOPER</h5>
+								<div class="row">
+									<span class="col m8 red-text">Công ty phần mềm Global Cybersoft</span>
+									<span class="col m4">Tân Bình | Hồ Chí Minh</span>
+									<span class="col m8">Chức vụ: Nhân viên</span>
+								</div>
+								<div class="row">
+									<span class="col m12">
+										Triển khai các dự án của công ty (frontend-backend).Tham gia lấy yêu cầu, thiết kế, xây dựng, triển khai, quản trị. Chịu trách nhiệm về tiến độ và kết quả công việc được giao. Hoàn thiện bản thân về kỹ năng lập kế hoạch và quản lý nhóm....
+									</span>
+								</div>
+								<div class="row">
+									<span class="col m8">
+										<a href="#" class="chip">Java</a>
+										<a href="#" class="chip">English</a>
+										<a href="#" class="chip">MySQL</a>
+										<a href="#" class="chip">HTML</a>
+										<a href="#" class="chip">CSS</a>
+									</span>
+								</div>
+							</div>
+							<div class="col m3">
+								<div class="row center">
+									<span class="salary">500$-1000$</span>
+									<div class="logo-box">
+										<img class="responsive-img" src="images/small_logo.png">
+									</div>
+								</div>
+								<div class="row center">
+									<span class="publish-date">20/10/2012</span>
+									<span class="view-count">2034</span>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>	
 			</div>
-
-			<div class="card-panel">
-				<h5>Nhà tuyển dụng hàng đầu</h5>
-				<div class="carousel">
-					<a class="carousel-item" href="#one!"><img src="images/carousel/1.png"></a>
-					<a class="carousel-item" href="#two!"><img src="images/carousel/2.png"></a>
-					<a class="carousel-item" href="#three!"><img src="images/carousel/3.png"></a>
-					<a class="carousel-item" href="#four!"><img src="images/carousel/4.png"></a>
-					<a class="carousel-item" href="#five!"><img src="images/carousel/8.png"></a>
+			<div class="col m3">
+				<div id="top-company" class="card-panel center">
+					<h5>Nhà Tuyển Dụng</h5>
+					<img src="images/carousel/1.png" class="company-logo responsive-img">
+					<img src="images/carousel/2.png" class="company-logo responsive-img">
+					<img src="images/carousel/3.png" class="company-logo responsive-img">
+					<img src="images/carousel/4.png" class="company-logo responsive-img">
+					<img src="images/carousel/6.png" class="company-logo responsive-img">
 				</div>
 			</div>
 		</div>
