--- a/company-career.html
+++ b/company-career.html
@@ -165,7 +165,7 @@
 					</div>
 				</div>
 				<div class="company-name">
-					<h4>Compane Name</h4>
+					<h4>Company Name</h4>
 				</div>
 			</div>
 			<div class="col m12 company-menu">
@@ -175,47 +175,95 @@
 				</div>
 				<div class="wrap-menu-item z-depth-1">
 					<ul class="inline-flex">
-						<li class="current-item"><a href="company.html">Home</a></li>
-						<li><a href="company-career.html">Careers</a></li>
+						<li><a href="company.html">Home</a></li>
+						<li class="current-item"><a href="company-career.html">Careers</a></li>
 					</ul>
 				</div>
 			</div>
 			<div class="col m12 company-content">
-				<div class="col m9 card-panel company-content-left">
-					<div class="col m12">
-						<div class="col m10 padding-0">
-							<h5>Compane Name</h5>
-							<div class="company-infor">
-								<ul class="inline-flex">
-									<li><i class="material-icons">people</i></li>
-									<li>Medium: 100-200</li>
-								</ul>
-								<ul class="inline-flex">
-									<li><i class="material-icons">people</i></li>
-									<li>Medium: 100-200</li>
-								</ul>
-								<ul class="inline-flex">
-									<li><i class="material-icons">people</i></li>
-									<li>Medium: 100-200</li>
-								</ul>
+				<div class="col m9 padding-0">
+					<!-- JOB PANEL -->
+					<div class="card-panel paddin">
+						<div class="card-content">
+							<div class="row">
+								<div class="col m9">
+									<h5>SENIOR JAVA DEVELOPER</h5>
+									<div class="row">
+										<span class="col m8 red-text">Công ty phần mềm Global Cybersoft</span>
+										<span class="col m4">Tân Bình | Hồ Chí Minh</span>
+										<span class="col m8">Chức vụ: Nhân viên</span>
+									</div>
+									<div class="row">
+										<span class="col m12">
+											Triển khai các dự án của công ty (frontend-backend).Tham gia lấy yêu cầu, thiết kế, xây dựng, triển khai, quản trị. Chịu trách nhiệm về tiến độ và kết quả công việc được giao. Hoàn thiện bản thân về kỹ năng lập kế hoạch và quản lý nhóm....
+										</span>
+									</div>
+									<div class="row">
+										<span class="col m12">
+											<a href="#" class="chip chip-hover">Java</a>
+											<a href="#" class="chip chip-hover">English</a>
+											<a href="#" class="chip chip-hover">MySQL</a>
+											<a href="#" class="chip chip-hover">HTML</a>
+											<a href="#" class="chip chip-hover">CSS</a>
+										</span>
+									</div>
+								</div>
+								<div class="col m3">
+									<div class="row center">
+										<span class="salary">500$-1000$</span>
+										<div class="logo-box">
+											<img class="responsive-img" src="images/small_logo.png">
+										</div>
+									</div>
+									<div class="row center">
+										<span class="publish-date">20/10/2012</span>
+										<span class="view-count">2034</span>
+									</div>
+								</div>
+
 							</div>
 						</div>
-						<div class="col m2">
-							####
-						</div>
 					</div>
-					<div class="col m12">
-						<h5>Công ty 100% vốn Nhật Bản chuyên cung cấp giải pháp gia công phần mềm tiêu chuẩn quốc tế.</h5>
-						<p>Được thành lập vào năm 2006 với 100% vốn Nhật Bản, JV-IT là công ty cung cấp giải pháp gia công phần mềm tiêu chuẩn quốc tế. JV-IT chuyên cung cấp các dịch vụ phát triển website, các sản phẩm công nghệ tin học, phát triển game… cho thị trường Nhật Bản. Sau hơn 7 năm hoạt động, trở thành một trong những thương hiệu hàng đầu của Việt Nam và vươn tầm quốc tế, chúng tôi ý thức được rằng phải chú trọng xây dựng bền vững dựa trên nền tảng con người. JV-IT là nơi khẳng định tài năng, ươm mầm sáng tạo, không có ý tưởng nào với chúng tôi là nhỏ bé, chúng tôi tôn vinh và tạo điều kiện để bạn biến nó thành hiện thực.</p>
-						<h5>Tech Stack</h5>
-						<div class="row">
-							<span class="col m8">
-								<a href="#" class="chip">Java</a>
-								<a href="#" class="chip">English</a>
-								<a href="#" class="chip">MySQL</a>
-								<a href="#" class="chip">HTML</a>
-								<a href="#" class="chip">CSS</a>
-							</span>
+					<!-- JOB PANEL -->
+					<div class="card-panel paddin">
+						<div class="card-content">
+							<div class="row">
+								<div class="col m9">
+									<h5>SENIOR JAVA DEVELOPER</h5>
+									<div class="row">
+										<span class="col m8 red-text">Công ty phần mềm Global Cybersoft</span>
+										<span class="col m4">Tân Bình | Hồ Chí Minh</span>
+										<span class="col m8">Chức vụ: Nhân viên</span>
+									</div>
+									<div class="row">
+										<span class="col m12">
+											Triển khai các dự án của công ty (frontend-backend).Tham gia lấy yêu cầu, thiết kế, xây dựng, triển khai, quản trị. Chịu trách nhiệm về tiến độ và kết quả công việc được giao. Hoàn thiện bản thân về kỹ năng lập kế hoạch và quản lý nhóm....
+										</span>
+									</div>
+									<div class="row">
+										<span class="col m12">
+											<a href="#" class="chip chip-hover">Java</a>
+											<a href="#" class="chip chip-hover">English</a>
+											<a href="#" class="chip chip-hover">MySQL</a>
+											<a href="#" class="chip chip-hover">HTML</a>
+											<a href="#" class="chip chip-hover">CSS</a>
+										</span>
+									</div>
+								</div>
+								<div class="col m3">
+									<div class="row center">
+										<span class="salary">500$-1000$</span>
+										<div class="logo-box">
+											<img class="responsive-img" src="images/small_logo.png">
+										</div>
+									</div>
+									<div class="row center">
+										<span class="publish-date">20/10/2012</span>
+										<span class="view-count">2034</span>
+									</div>
+								</div>
+
+							</div>
 						</div>
 					</div>
 				</div>
