--- a/company.html
+++ b/company.html
@@ -165,7 +165,7 @@
 					</div>
 				</div>
 				<div class="company-name">
-					<h4>Compane Name</h4>
+					<h4>Company Name</h4>
 				</div>
 			</div>
 			<div class="col m12 company-menu">
@@ -181,42 +181,48 @@
 				</div>
 			</div>
 			<div class="col m12 company-content">
-				<div class="col m9 card-panel company-content-left">
-					<div class="col m12">
-						<div class="col m10 padding-0">
-							<h5>Compane Name</h5>
-							<div class="company-infor">
-								<ul class="inline-flex">
-									<li><i class="material-icons">people</i></li>
-									<li>Medium: 100-200</li>
-								</ul>
-								<ul class="inline-flex">
-									<li><i class="material-icons">people</i></li>
-									<li>Medium: 100-200</li>
-								</ul>
-								<ul class="inline-flex">
-									<li><i class="material-icons">people</i></li>
-									<li>Medium: 100-200</li>
-								</ul>
+				<div class="col m9 padding-0">
+					<div class="col m12 card-panel company-content-left">
+						<div class="col m12">
+							<div class="col m10 padding-0">
+								<h5>Company Name</h5>
+								<div class="company-infor">
+									<ul class="inline-flex">
+										<li><i class="material-icons">people</i></li>
+										<li>Medium: 100-200</li>
+									</ul>
+									<ul class="inline-flex">
+										<li><i class="material-icons">people</i></li>
+										<li>Medium: 100-200</li>
+									</ul>
+									<ul class="inline-flex">
+										<li><i class="material-icons">people</i></li>
+										<li>Medium: 100-200</li>
+									</ul>
+								</div>
+							</div>
+							<div class="col m2">
+								####
 							</div>
 						</div>
-						<div class="col m2">
-							####
+						<div class="col m12">
+							<h5>Công ty 100% vốn Nhật Bản chuyên cung cấp giải pháp gia công phần mềm tiêu chuẩn quốc tế.</h5>
+							<p>Được thành lập vào năm 2006 với 100% vốn Nhật Bản, JV-IT là công ty cung cấp giải pháp gia công phần mềm tiêu chuẩn quốc tế. JV-IT chuyên cung cấp các dịch vụ phát triển website, các sản phẩm công nghệ tin học, phát triển game… cho thị trường Nhật Bản. Sau hơn 7 năm hoạt động, trở thành một trong những thương hiệu hàng đầu của Việt Nam và vươn tầm quốc tế, chúng tôi ý thức được rằng phải chú trọng xây dựng bền vững dựa trên nền tảng con người. JV-IT là nơi khẳng định tài năng, ươm mầm sáng tạo, không có ý tưởng nào với chúng tôi là nhỏ bé, chúng tôi tôn vinh và tạo điều kiện để bạn biến nó thành hiện thực.</p>
+							<h5>Tech Stack</h5>
+							<div class="row">
+								<span class="col m8">
+									<a href="#" class="chip chip-hover">Java</a>
+									<a href="#" class="chip chip-hover">English</a>
+									<a href="#" class="chip chip-hover">MySQL</a>
+									<a href="#" class="chip chip-hover">HTML</a>
+									<a href="#" class="chip chip-hover">CSS</a>
+								</span>
+							</div>
 						</div>
 					</div>
-					<div class="col m12">
-						<h5>Công ty 100% vốn Nhật Bản chuyên cung cấp giải pháp gia công phần mềm tiêu chuẩn quốc tế.</h5>
-						<p>Được thành lập vào năm 2006 với 100% vốn Nhật Bản, JV-IT là công ty cung cấp giải pháp gia công phần mềm tiêu chuẩn quốc tế. JV-IT chuyên cung cấp các dịch vụ phát triển website, các sản phẩm công nghệ tin học, phát triển game… cho thị trường Nhật Bản. Sau hơn 7 năm hoạt động, trở thành một trong những thương hiệu hàng đầu của Việt Nam và vươn tầm quốc tế, chúng tôi ý thức được rằng phải chú trọng xây dựng bền vững dựa trên nền tảng con người. JV-IT là nơi khẳng định tài năng, ươm mầm sáng tạo, không có ý tưởng nào với chúng tôi là nhỏ bé, chúng tôi tôn vinh và tạo điều kiện để bạn biến nó thành hiện thực.</p>
-						<h5>Tech Stack</h5>
-						<div class="row">
-							<span class="col m8">
-								<a href="#" class="chip">Java</a>
-								<a href="#" class="chip">English</a>
-								<a href="#" class="chip">MySQL</a>
-								<a href="#" class="chip">HTML</a>
-								<a href="#" class="chip">CSS</a>
-							</span>
-						</div>
+					<div class="col m12 card-panel">
+						comment
+						<div class="fb-comments" data-href="https://www.facebook.com/pcremotevn/?fref=ts" data-numposts="5"></div>
 					</div>
 				</div>
 				<div class="col m3 padding-right-0">
@@ -232,5 +238,13 @@
 			</div>
 		</div>
 	</div>
+	<div id="fb-root"></div>
+	<script>(function(d, s, id) {
+		var js, fjs = d.getElementsByTagName(s)[0];
+		if (d.getElementById(id)) return;
+		js = d.createElement(s); js.id = id;
+		js.src = "//connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v2.6";
+		fjs.parentNode.insertBefore(js, fjs);
+	}(document, 'script', 'facebook-jssdk'));</script>
 </body>
 </html>
