Fix home.html Add job-details.html

--- a/company-career.html
+++ b/company-career.html
@@ -70,12 +70,7 @@
 							</div>
 							<ul class="menu-item">
 								<li>
-									<div class="menu-item-header">
-										<a href="#">
-											<div class="item-icon"><i class="material-icons margin-right-5">account_box</i></div>
-											<div>Hồ sơ cá nhân</div>
-										</a>
-									</div>
+									<div class="menu-item-header"><a href="#"><i class="material-icons prefix-icon">account_box</i>Hồ sơ cá nhân</a></div>
 									<div class="menu-item-body">
 										<ul>
 											<li><a href="#">Chỉnh sửa hồ sơ</a></li>
@@ -86,21 +81,12 @@
 									</div>
 								</li>
 								<li>
-									<div class="menu-item-header">
-										<a href="#">
-											<div class="item-icon"><i class="material-icons margin-right-5">add_alert</i></div>
-											<div>Thông báo</div>
-										</a>
+									<div class="menu-item-header"><a href="#"><i class="material-icons prefix-icon">add_alert</i>Thông báo</a>
 										<div class="chip red lighten-2 white-text noti-count">5</div>
 									</div>
 								</li>
 								<li>
-									<div class="menu-item-header">
-										<a href="#">
-											<div class="item-icon"><i class="material-icons margin-right-5">donut_large</i></div>
-											<div>Theo dõi</div>
-										</a>
-									</div>
+									<div class="menu-item-header"><a href="#"><i class="material-icons prefix-icon">donut_large</i>Theo dõi</a></div>
 									<div class="menu-item-body">
 										<ul>
 											<li><a href="#">Người đang theo dõi</a></li>
@@ -109,12 +95,7 @@
 									</div>
 								</li>
 								<li>
-									<div class="menu-item-header">
-										<a href="#">
-											<div class="item-icon"><i class="material-icons margin-right-5">bookmark</i></div>
-											<div>Quản lý nghề nghiệp</div>
-										</a>
-									</div>
+									<div class="menu-item-header"><a href="#"><i class="material-icons prefix-icon">bookmark</i>Quản lý nghề nghiệp</a></div>
 									<div class="menu-item-body">
 										<ul>
 											<li><a href="#">Công việc đã lưu</a></li>
@@ -123,20 +104,10 @@
 									</div>
 								</li>
 								<li>
-									<div class="menu-item-header">
-										<a href="#">
-											<div class="item-icon"><i class="material-icons margin-right-5">account_circle</i></div>
-											<div>Tài khoản</div>
-										</a>
-									</div>
+									<div class="menu-item-header"><a href="#"><i class="material-icons prefix-icon">account_circle</i>Tài khoản</a></div>
 								</li>
 								<li>
-									<div class="menu-item-header">
-										<a href="#">
-											<div class="item-icon"><i class="material-icons margin-right-5">exit_to_app</i></div>
-											<div>Thoát</div>
-										</a>
-									</div>
+									<div class="menu-item-header"><a href="#"><i class="material-icons prefix-icon">exit_to_app</i>Thoát</a></div>
 								</li>
 							</ul>
 						</div>
