--- a/job-details.html
+++ b/job-details.html
@@ -117,104 +117,100 @@
 	<div class="container">
 		<div class="row">
 			<div class="col m9">
-				<h4>Công việc nổi bật</h4>
-				<!-- JOB PANEL -->
-				<div id="job-list">
-					<div class="card-panel">
+				<!--GENERAL JOB INFO-->
+				<div class="card-panel job-detail">
+					<div class="row">
 						<div class="row">
-							<div class="col m9">
-								<h5 class="job-title">SENIOR JAVA DEVELOPER</h5>
-								<div class="row">
-									<div class="col m10 red-text"><a href="">Công ty phần mềm Global Cybersoft</a></div>
-									<div class="col m6">Chức vụ: Nhân viên</div>
-									<div class="col m6">Tân Bình | Hồ Chí Minh</div>
-								</div>
-								<div class="row">
-									<span class="col m12">
-										Triển khai các dự án của công ty (frontend-backend).Tham gia lấy yêu cầu, thiết kế, xây dựng, triển khai, quản trị. Chịu trách nhiệm về tiến độ và kết quả công việc được giao. Hoàn thiện bản thân về kỹ năng lập kế hoạch và quản lý nhóm....
-									</span>
-								</div>
-								<div class="row">
-									<span class="col m8">
-										<a href="#" class="chip">Java</a>
-										<a href="#" class="chip">English</a>
-										<a href="#" class="chip">MySQL</a>
-										<a href="#" class="chip">HTML</a>
-										<a href="#" class="chip">CSS</a>
-									</span>
-								</div>
+							<div class="col m12">
+								<p class="title blue-text">Nhân Viên Kinh Doanh Cho CN Mới Thành Lập Tại Nha Trang - Thu Nhập Hấp Dẫn</p>
 							</div>
-							<div class="col m3">
-								<div class="row center">
-									<span class="salary">500$-1000$</span>
-									<div class="logo-box">
-										<img class="responsive-img" src="images/small_logo.png">
-									</div>
-								</div>
-								<div class="row center">
-									<span class="publish-date">20/10/2012</span>
-									<span class="view-count">2034</span>
-								</div>
-								<div class="row center">
-									<a href="#"><i class="material-icons prefix-icon orange-text">bookmark</i>Lưu vào yêu thích</a>
-								</div>
+							<div class="col m7 offset-m5 date-and-view">
+								<span>Đăng ngày: 20/10/2015 | </span>
+								<span>Lượt xem: 7,787</span>
+							</div>
+							<div class="col m12">
+								<hr class="fancy-hr" />
 							</div>
 						</div>
-					</div>
-					<div class="card-panel">
 						<div class="row">
-							<div class="col m9">
-								<h5 class="job-title">SENIOR JAVA DEVELOPER</h5>
-								<div class="row">
-									<div class="col m10 red-text"><a href="">Công ty phần mềm Global Cybersoft</a></div>
-									<div class="col m6">Chức vụ: Nhân viên</div>
-									<div class="col m6">Tân Bình | Hồ Chí Minh</div>
-								</div>
-								<div class="row">
-									<span class="col m12">
-										Triển khai các dự án của công ty (frontend-backend).Tham gia lấy yêu cầu, thiết kế, xây dựng, triển khai, quản trị. Chịu trách nhiệm về tiến độ và kết quả công việc được giao. Hoàn thiện bản thân về kỹ năng lập kế hoạch và quản lý nhóm....
-									</span>
-								</div>
-								<div class="row">
-									<span class="col m8">
-										<a href="#" class="chip">Java</a>
-										<a href="#" class="chip">English</a>
-										<a href="#" class="chip">MySQL</a>
-										<a href="#" class="chip">HTML</a>
-										<a href="#" class="chip">CSS</a>
-									</span>
+							<div class="col m8">
+								<div class="row job-box-1">
+									<div class="col m12"><span class="bold-text">ALMA Chi Nhánh Nha Trang</span></div>
+									<div class="col m12"><span class="bold-text">Nơi làm việc: </span><span>Tân Bình, TP. Hồ Chí Minh</span></div>
+									<div class="col m12"><span class="bold-text">Lương: </span><span class="orange-text">500-1000$</span></div>
 								</div>
 							</div>
-							<div class="col m3">
-								<div class="row center">
-									<span class="salary">500$-1000$</span>
-									<div class="logo-box">
-										<img class="responsive-img" src="images/small_logo.png">
-									</div>
-								</div>
-								<div class="row center">
-									<span class="publish-date">20/10/2012</span>
-									<span class="view-count">2034</span>
-								</div>
-								<div class="row center">
-									<a href="#"><i class="material-icons prefix-icon orange-text">bookmark</i>Lưu vào yêu thích</a>
+							<div class="col m4">
+								<div class="row">
+									<a class="waves-effect waves-light btn col m9 offset-m2 favourite-btn red lighten-2"><i class="material-icons left white-text">bookmark</i>Yêu thích</a>
+									<a class="waves-effect waves-light btn col m9 offset-m2"><i class="material-icons left white-text">note_add</i>Ứng tuyển</a>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-				<div class="center">
-					<a class="btn waves-effect waves-light">Nhiều công việc hơn</a>
+				<!-- JOB DESCRIBE -->
+				<div class="card-panel">
+					<h5>Công việc của bạn</h5>
+					<hr>
+					<div class="higher-line">
+						- Website and desktop application development in .NET framework <br>
+						- Communicate directly with our overseas staff and clients to get software development requirements. <br>
+						(More details to be discussed in the interview) <br>
+					</div>
+				</div>
+
+				<div class="card-panel">
+					<h5>Yêu cầu</h5>
+					<hr>
+					<div class="higher-line">
+						- At least 5 years’ experience in .NET application development and ASP.NET, both front end and back end. <br>
+						- Experience in Subsonic, entity framework. <br>
+						- Competence in .HTML, JavaScript, JQuery, CSS (3.0 - bootstrap), Ajax and client-based technologies <br>
+						- Competence in SQL, in particular SQL 2012. <br>
+						- Experience in version control tools such as Subversion. <br>
+						- Skills in Android, iOS is an advantage. <br>
+						- Motivation and ability to do research on new technologies. <br>
+						- Soft skills in working in a team, good communication, problem-solving.<br> 
+						- Degree in Computer Science, Information Technology or equivalent. <br>
+						- Strong English speaking and writing skills a must. <br>
+						- The application must be written in English<br>
+					</div>
 				</div>
 			</div>
 			<div class="col m3">
-				<div id="top-company" class="card-panel center">
-					<h5>Nhà Tuyển Dụng</h5>
-					<img src="images/carousel/1.png" class="company-logo responsive-img">
-					<img src="images/carousel/2.png" class="company-logo responsive-img">
-					<img src="images/carousel/3.png" class="company-logo responsive-img">
-					<img src="images/carousel/4.png" class="company-logo responsive-img">
-					<img src="images/carousel/6.png" class="company-logo responsive-img">
+				<!--COMPANY BASIC INFO -->
+				<div class="card-panel company-box">
+					<div class="center">
+						<img class="responsive-img company-logo" src="images/carousel/2.png">
+						<h6><a href="#">ALMA Chi Nhánh Nha Trang</a></h6>
+					</div>	
+					<hr class="fancy-hr"></hr>
+					<p>Our software solutions provided to the market is being used by thousands of finance professionals.</p>
+					<table class="striped">
+						<tr>
+							<td>Lĩnh vực: </td>
+							<td>Bảo hiểm</td>
+						</tr>
+						<tr>
+							<td>Quy mô: </td>
+							<td>Trên 200</td>
+						</tr>
+						<tr>
+							<td>Quốc gia: </td>
+							<td>Việt Nam</td>
+						</tr>
+					</table>
+					<div class="company-location center">
+						<img class="responsive-img" src="images/maps.jpg"></img>
+						<p><span>Địa chỉ: </span> 4/3 Đồ Sơn, Phường 12, Quận Tân Bình, TP. HCM</p>
+					</div>
+					<div class="center">
+						<p><a href="#">Có 5 công việc khác</a></p>
+						<div>
+							<a class="btn waves-effect waves-light">Xem trang</a>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
