--- a/profile.html
+++ b/profile.html
@@ -196,14 +196,66 @@
 				<div class="col m9 padding-0">
 					<div class="col m12 card-panel">
 						<h4>Skills & Endorsements</h4>
+						<hr />
 						<div class="profile-skills">
 							<h5>Top skills</h5>
 							<ul class="skills-selection">
-								<li class="endorse-item">
+								<!-- Begin Endorse Item -->
+								<li class="endorse-item width-x1">
 									<span class="skill-pill">
 										<a href="" class="endorse-count">
 											<span class="num-endorsements">
-												8
+												1000
+											</span>
+										</a>
+										<span class="endorse-item-name-text">
+											<a href="" class="endorse-item-name">
+												Web Services
+											</a>
+										</span>
+									</span>
+									<div class="endorsing" id="endorsing1">
+										<span class="endorse-plus" onmouseout="generaterMouseOut('endorsing1');" onmouseover="generaterMouseOver('endorsing1');" onclick="generaterClickEndorse('endorsing1', 'endorse-plus', 'endorse-minus');"><i class="material-icons color-blue">add</i><p class="color-blue">Endorse</p>
+										</span>
+										<span class="endorse-minus" onmouseout="generaterMouseOut('endorsing1');" onmouseover="generaterMouseOver('endorsing1');" onclick="generaterClickEndorse('endorsing1', 'endorse-minus', 'endorse-plus');"><i class="material-icons color-blue">remove</i><p class="color-blue">Remove Endorsement</p></span>
+									</div>
+									<div class="endorsers-container">
+										<ul class="endorsers-pics">
+											<li>
+												<span>
+													<img src="images/avatar-images/avatar.png">
+												</span>
+											</li>
+											<li>
+												<span>
+													<img src="images/avatar-images/avatar.png">
+												</span>
+											</li>
+											<li>
+												<span>
+													<img src="images/avatar-images/avatar.png">
+												</span>
+											</li>
+											<li>
+												<span>
+													<img src="images/avatar-images/avatar.png">
+												</span>
+											</li>
+											<li class="endorsers-action">
+												<span>
+													<i class="material-icons">chevron_right</i>
+												</span>
+											</li>
+										</ul>
+									</div>
+								</li>
+								<!-- end item -->
+
+								<li class="endorse-item width-x1">
+									<span class="skill-pill">
+										<a href="" class="endorse-count">
+											<span class="num-endorsements">
+												80
 											</span>
 										</a>
 										<span class="endorse-item-name-text">
@@ -212,12 +264,173 @@
 											</a>
 										</span>
 									</span>
+									<div class="endorsing" id="endorsing2">
+										<span class="endorse-plus" onmouseout="generaterMouseOut('endorsing2');" onmouseover="generaterMouseOver('endorsing2');" onclick="generaterClickEndorse('endorsing2', 'endorse-plus', 'endorse-minus');"><i class="material-icons color-blue">add</i><p class="color-blue">Endorse</p>
+										</span>
+										<span class="endorse-minus" onmouseout="generaterMouseOut('endorsing2');" onmouseover="generaterMouseOver('endorsing2');" onclick="generaterClickEndorse('endorsing2', 'endorse-minus', 'endorse-plus');"><i class="material-icons color-blue">remove</i><p class="color-blue">Remove Endorsement</p></span>
+									</div>
 									<div class="endorsers-container">
-										a
+										<ul class="endorsers-pics">
+											<li>
+												<span>
+													<img src="images/avatar-images/avatar.png">
+												</span>
+											</li>
+											<li>
+												<span>
+													<img src="images/avatar-images/avatar.png">
+												</span>
+											</li>
+											<li>
+												<span>
+													<img src="images/avatar-images/avatar.png">
+												</span>
+											</li>
+											<li>
+												<span>
+													<img src="images/avatar-images/avatar.png">
+												</span>
+											</li>
+											<li class="endorsers-action">
+												<span>
+													<i class="material-icons">chevron_right</i>
+												</span>
+											</li>
+										</ul>
+									</div>
+								</li>
+								<!-- Begin Endorse Item -->
+								<li class="endorse-item width-x1">
+									<span class="skill-pill">
+										<a href="" class="endorse-count">
+											<span class="num-endorsements">
+												10
+											</span>
+										</a>
+										<span class="endorse-item-name-text">
+											<a href="" class="endorse-item-name">
+												Project Management
+											</a>
+										</span>
+									</span>
+									<div class="endorsing" id="endorsing3">
+										<span class="endorse-plus" onmouseout="generaterMouseOut('endorsing3');" onmouseover="generaterMouseOver('endorsing3');" onclick="generaterClickEndorse('endorsing3', 'endorse-plus', 'endorse-minus');"><i class="material-icons color-blue">add</i><p class="color-blue">Endorse</p>
+										</span>
+										<span class="endorse-minus" onmouseout="generaterMouseOut('endorsing3');" onmouseover="generaterMouseOver('endorsing3');" onclick="generaterClickEndorse('endorsing3', 'endorse-minus', 'endorse-plus');"><i class="material-icons color-blue">remove</i><p class="color-blue">Remove Endorsement</p></span>
+									</div>
+									<div class="endorsers-container">
+										<ul class="endorsers-pics">
+											<li>
+												<span>
+													<img src="images/avatar-images/avatar.png">
+												</span>
+											</li>
+											<li>
+												<span>
+													<img src="images/avatar-images/avatar.png">
+												</span>
+											</li>
+											<li>
+												<span>
+													<img src="images/avatar-images/avatar.png">
+												</span>
+											</li>
+											<li>
+												<span>
+													<img src="images/avatar-images/avatar.png">
+												</span>
+											</li>
+											<li class="endorsers-action">
+												<span>
+													<i class="material-icons">chevron_right</i>
+												</span>
+											</li>
+										</ul>
+									</div>
+								</li>
+								<!-- end item -->
+							</ul>
+							<h5>Phan also knows about...</h5>
+							<ul class="compact-view">
+								<li class="endorse-item">
+									<span class="skill-pill">
+										<a href="" class="endorse-count">
+											<span class="num-endorsements">
+												1000
+											</span>
+										</a>
+										<span class="endorse-item-name-text">
+											<a href="" class="endorse-item-name">
+												Web Services
+											</a>
+										</span>
+									</span>
+									<div class="endorsing" id="endorsing4">
+										<span class="endorse-plus" onmouseout="generaterMouseOut('endorsing4');" onmouseover="generaterMouseOver('endorsing4');" onclick="generaterClickEndorse('endorsing4', 'endorse-plus', 'endorse-minus');"><i class="material-icons color-blue">add</i>
+										</span>
+										<span class="endorse-minus" onmouseout="generaterMouseOut('endorsing4');" onmouseover="generaterMouseOver('endorsing4');" onclick="generaterClickEndorse('endorsing4', 'endorse-minus', 'endorse-plus');"><i class="material-icons color-blue">remove</i></span>
+									</div>
+								</li>
+								<li class="endorse-item">
+									<span class="skill-pill">
+										<a href="" class="endorse-count">
+											<span class="num-endorsements">
+												1000
+											</span>
+										</a>
+										<span class="endorse-item-name-text">
+											<a href="" class="endorse-item-name">
+												Web Services
+											</a>
+										</span>
+									</span>
+									<div class="endorsing" id="endorsing4">
+										<span class="endorse-plus" onmouseout="generaterMouseOut('endorsing4');" onmouseover="generaterMouseOver('endorsing4');" onclick="generaterClickEndorse('endorsing4', 'endorse-plus', 'endorse-minus');"><i class="material-icons color-blue">add</i>
+										</span>
+										<span class="endorse-minus" onmouseout="generaterMouseOut('endorsing4');" onmouseover="generaterMouseOver('endorsing4');" onclick="generaterClickEndorse('endorsing4', 'endorse-minus', 'endorse-plus');"><i class="material-icons color-blue">remove</i></span>
+									</div>
+								</li>
+								<li class="endorse-item">
+									<span class="skill-pill">
+										<a href="" class="endorse-count">
+											<span class="num-endorsements">
+												1000
+											</span>
+										</a>
+										<span class="endorse-item-name-text">
+											<a href="" class="endorse-item-name">
+												Web Services
+											</a>
+										</span>
+									</span>
+									<div class="endorsing" id="endorsing4">
+										<span class="endorse-plus" onmouseout="generaterMouseOut('endorsing4');" onmouseover="generaterMouseOver('endorsing4');" onclick="generaterClickEndorse('endorsing4', 'endorse-plus', 'endorse-minus');"><i class="material-icons color-blue">add</i>
+										</span>
+										<span class="endorse-minus" onmouseout="generaterMouseOut('endorsing4');" onmouseover="generaterMouseOver('endorsing4');" onclick="generaterClickEndorse('endorsing4', 'endorse-minus', 'endorse-plus');"><i class="material-icons color-blue">remove</i></span>
+									</div>
+								</li>
+								<li class="endorse-item">
+									<span class="skill-pill">
+										<a href="" class="endorse-count">
+											<span class="num-endorsements">
+												1000
+											</span>
+										</a>
+										<span class="endorse-item-name-text">
+											<a href="" class="endorse-item-name">
+												Web Services
+											</a>
+										</span>
+									</span>
+									<div class="endorsing" id="endorsing4">
+										<span class="endorse-plus" onmouseout="generaterMouseOut('endorsing4');" onmouseover="generaterMouseOver('endorsing4');" onclick="generaterClickEndorse('endorsing4', 'endorse-plus', 'endorse-minus');"><i class="material-icons color-blue">add</i>
+										</span>
+										<span class="endorse-minus" onmouseout="generaterMouseOut('endorsing4');" onmouseover="generaterMouseOver('endorsing4');" onclick="generaterClickEndorse('endorsing4', 'endorse-minus', 'endorse-plus');"><i class="material-icons color-blue">remove</i></span>
 									</div>
 								</li>
 							</ul>
 						</div>
+						<br />
 					</div>
 					<div class="col m12 card-panel">
 						
