Add Skill Requirement

--- a/job-details.html
+++ b/job-details.html
@@ -138,6 +138,13 @@
 									<div class="col m12"><span class="bold-text">ALMA Chi Nhánh Nha Trang</span></div>
 									<div class="col m12"><span class="bold-text">Nơi làm việc: </span><span>Tân Bình, TP. Hồ Chí Minh</span></div>
 									<div class="col m12"><span class="bold-text">Lương: </span><span class="orange-text">500-1000$</span></div>
+									<div class="col m12">
+										<span class="bold-text">Kỹ năng: </span>
+										<div class="chip">Java</div>
+										<div class="chip">English</div>
+										<div class="chip">Spring</div>
+										<div class="chip">Hibernate</div>
+									</div>
 								</div>
 							</div>
 							<div class="col m4">
